--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="victory" id="victory">
       <div class="victory__wrapper">
         <span class="victory__winner" id="winner"></span>
-        <span>Won!</span>
+        <span id="state">Won!</span>
         <a href="#" class="btn" id="reloadBtn">try again</a>
       </div>
     </section>
